force-app/main/default/objects/Market_Alert__c/Market_Alert__c.object-meta.xml
<CustomObject>
    <description>Stores real-time NSE/BSE market alert events ingested via Data Cloud webhook</description>
    <label>Market Alert</label>
    <nameField>
        <displayFormat>ALERT-{0000}</displayFormat>
        <label>Market Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>