force-app/main/default/objects/Market_Alert__c/fields/Affected_Sector__c.field-meta.xml
<CustomField>
    <fullName>Affected_Sector__c</fullName>
    <label>Affected Sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>