force-app/main/default/objects/Market_Alert__c/fields/Change_Pct__c.field-meta.xml
<CustomField>
    <fullName>Change_Pct__c</fullName>
    <label>Change Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>