force-app/main/default/objects/Market_Alert__c/fields/Impacted_Client_Count__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Client_Count__c</fullName>
    <label>Impacted Client Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>