force-app/main/default/objects/Market_Alert__c/fields/Index_Name__c.field-meta.xml
<CustomField>
    <fullName>Index_Name__c</fullName>
    <label>Index Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>