force-app/main/default/objects/Market_Alert__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>HIGH</fullName><default>false</default><label>HIGH</label></value>
            <value><fullName>MEDIUM</fullName><default>false</default><label>MEDIUM</label></value>
            <value><fullName>LOW</fullName><default>false</default><label>LOW</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>